<resources>

    <string name="app_name">City Guide</string>
    <string name="logo_name">Tashkent Guide</string>
    <string name="slogan_name"> We will help you find your way! </string>
    <string name="powered_by">Powered by Korsun Pavel</string>

    <string name="first_slide_title"> Search Your Location</string>
    <string name="second_slide_title"> Make A Call</string>
    <string name="third_slide_title"> Add Missing Place</string>
    <string name="fourth_slide_title"> Sit Back And Enjoy</string>

    <string name="first_slide_desc"> You can search any place nearly or within the specified city. We will display specific or all related shops to match your search </string>
    <string name="second_slide_desc"> We provide almost all the numbers of all departments and shops  registered with us. You can perform bookings as well</string>
    <string name="third_slide_desc"> If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps</string>
    <string name="fourth_slide_desc"> We will handle everything for you. As you have the app in your packet then you don\'t have to worry about anything</string>


    <string name="skip_btn"> Skip </string>
    <string name="next_btn"> Next </string>
    <string name="let_get_started"> Lets Get Started </string>

    //Категории
    <string name="hotels"> Hotels </string>
    <string name="restaurants"> Restaurants </string>
    <string name="shops"> Shops </string>
    <string name="banks"> Banks </string>
    <string name="club"> Night Clubs </string>
    <string name="hospital"> Hospital </string>
    <string name="pharmacy"> Pharmacy </string>
    <string name="rent_car"> Car Rent </string>
    <string name="education"> Education </string>
    <string name="attraction"> Attraction </string>
    <string name="expand_all">Expand All</string>

    //Для бизнеса
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>

    //Основные
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">Login</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="Share">Share</string>
    <string name="rate_us">Rate US</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_full_name">Full name</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>


    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town</string>
    <string name="most_viewed_locations">Most viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>

    <string name="nav_login">Login</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate_us">Rate us</string>
    <string name="nav_location">Near you</string>


    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password we just sent to your given mobile number</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_text">Resend</string>
    <string name="otp_resend_text">If you didnt recieve a code...</string>


    <string name="forget_password_detail">Provide your accounts email for which you want\n to reset your password!</string>
    <string name="make_selection">Make selection</string>
    <string name="via_sms">Via sms</string>
    <string name="todo">TODO</string>
    <string name="via_email">Via email</string>
    <string name="password_updated">Password updated</string>
    <string name="password_updated_success_message">your password has been updated</string>
    <string name="new_credentials_detail">Your identify has been verified!\n Set your new password</string>
    <string name="new_credentials">New credentials</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password</string>
    <string name="plovdesc">There are many places in Tashkent where they prepare more delicious pilaf, but nothing can compare with the scale, volume of this dish being prepared in the center of pilaf at the Tashkent TV tower. Pilaf begins to be cooked in the morning in the courtyard in five huge cast-iron cauldrons (containing 50 kg of rice) on firewood. By 11 oclock the pilaf is ready, after 3 hours all the cauldrons are empty. The center serves only pilaf, salads and tea. The huge hall can accommodate up to 500 people at the same time.</string>


</resources>
